--- a/quartz/styles/favicon.scss
+++ b/quartz/styles/favicon.scss
@@ -162,6 +162,7 @@ svg.favicon[data-domain="amazon_com"] {
 
   display: block;
   margin: 0 auto 1rem;
+  flex-flow: row wrap;
 }
 
 .favicon-demo-inline {
